2023-03-09  dyuret  <dyuret@login03.kuacc.ku.edu.tr>

	* rnn-abcd-best:
	{'batch_size': 128, 'hidden_size': 512, 'num_layers': 3, 'output_interval': 32, 'lr': 0.001, 'max_steps': 150000, 'dropout': 0.25, 'weight_decay': 0.1}
	tr = pl.Trainer(accelerator='gpu', devices=1, max_epochs=1)
	m1 = rnn.LitRNN.load_from_checkpoint('lightning_logs/version_4851386/checkpoints/epoch=433-step=78120.ckpt')
	abcval = ld.CalvinDataset("../data/ABC-validation", instances_per_episode=32, context_length=64)
	dval = ld.CalvinDataset("../data/D-validation", instances_per_episode=32, context_length=64)
	# using ipe=32 is not ideal, instead check the val_acc_n for ipe=1.
	abcval1 = ld.CalvinDataset("../data/ABC-validation", instances_per_episode=1, context_length=64)
	dval1 = ld.CalvinDataset("../data/D-validation", instances_per_episode=1, context_length=64)
	tr.validate(m1, DataLoader(abcval1, batch_size=128)) #=> [{'hp_metric': 0.9954001903533936, 'val_loss_all': 1.1064249277114868, 'val_acc_all': 0.7174131870269775, 'val_loss_1': 0.021554984152317047, 'val_acc_1': 0.9954001903533936, 'val_loss_n': 0.07080072909593582, 'val_acc_n': 0.976914644241333}]
	tr.validate(m1, DataLoader(abcval, batch_size=128))  #=> [{'hp_metric': 0.9954001903533936, 'val_loss_all': 2.9308674335479736, 'val_acc_all': 0.45334240794181824, 'val_loss_1': 1.4030355215072632, 'val_acc_1': 0.7879197597503662, 'val_loss_n': 2.2739408016204834, 'val_acc_n': 0.6895744204521179}]
	tr.validate(m1, DataLoader(dval1, batch_size=128))   #=> [{'hp_metric': 0.8921859264373779, 'val_loss_all': 1.781881332397461, 'val_acc_all': 0.6030075550079346, 'val_loss_1': 0.64299476146698, 'val_acc_1': 0.8921859264373779, 'val_loss_n': 0.8299209475517273, 'val_acc_n': 0.8604723215103149}]